// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`conversion format geojson deserialize: empty file => invalid 1`] = `"Unexpected end of JSON input"`;

exports[`conversion format geojson deserialize: missing coordinates => invalid 1`] = `"Cannot read properties of undefined (reading 'length')"`;

exports[`conversion format geojson deserialize: missing type => invalid 1`] = `
"Invalid GeoJSON detected:
- "type" member required
"
`;

exports[`conversion format geojson deserialize: no right-hand-rule-should-still-pass => valid 1`] = `
[
  {
    "latitude": 0,
    "longitude": 0,
  },
  {
    "latitude": 1,
    "longitude": 1,
  },
  {
    "latitude": 1,
    "longitude": 0,
  },
  {
    "latitude": 0,
    "longitude": 0,
  },
]
`;

exports[`conversion format geojson deserialize: not enough-coordinates => invalid 1`] = `
"Invalid GeoJSON detected:
- a LinearRing of coordinates needs to have four or more positions
,- Polygons and MultiPolygons should follow the right-hand rule
"
`;

exports[`conversion format geojson deserialize: open polygon => invalid 1`] = `
"Invalid GeoJSON detected:
- the first and last positions in a LinearRing of coordinates must be the same
"
`;

exports[`conversion format geojson deserialize: type feature => valid 1`] = `
[
  {
    "latitude": 53.56545917520555,
    "longitude": 10.0412155687809,
  },
  {
    "latitude": 53.56586697476003,
    "longitude": 10.018899589776995,
  },
  {
    "latitude": 53.58380626282291,
    "longitude": 10.005166679620745,
  },
  {
    "latitude": 53.56668256207333,
    "longitude": 9.993150383234026,
  },
  {
    "latitude": 53.56647866671947,
    "longitude": 9.961908012628557,
  },
  {
    "latitude": 53.555466857846014,
    "longitude": 9.979417473077776,
  },
  {
    "latitude": 53.55505895802228,
    "longitude": 10.02576604485512,
  },
  {
    "latitude": 53.56545917520555,
    "longitude": 10.0412155687809,
  },
]
`;

exports[`conversion format geojson deserialize: type feature-collection => valid 1`] = `
[
  {
    "latitude": 53.56545917520555,
    "longitude": 10.0412155687809,
  },
  {
    "latitude": 53.56586697476003,
    "longitude": 10.018899589776995,
  },
  {
    "latitude": 53.58380626282291,
    "longitude": 10.005166679620745,
  },
  {
    "latitude": 53.56668256207333,
    "longitude": 9.993150383234026,
  },
  {
    "latitude": 53.56647866671947,
    "longitude": 9.961908012628557,
  },
  {
    "latitude": 53.555466857846014,
    "longitude": 9.979417473077776,
  },
  {
    "latitude": 53.55505895802228,
    "longitude": 10.02576604485512,
  },
  {
    "latitude": 53.56545917520555,
    "longitude": 10.0412155687809,
  },
]
`;

exports[`conversion format geojson deserialize: type polygon => valid 1`] = `
[
  {
    "latitude": 53.56545917520555,
    "longitude": 10.0412155687809,
  },
  {
    "latitude": 53.56586697476003,
    "longitude": 10.018899589776995,
  },
  {
    "latitude": 53.58380626282291,
    "longitude": 10.005166679620745,
  },
  {
    "latitude": 53.56668256207333,
    "longitude": 9.993150383234026,
  },
  {
    "latitude": 53.56647866671947,
    "longitude": 9.961908012628557,
  },
  {
    "latitude": 53.555466857846014,
    "longitude": 9.979417473077776,
  },
  {
    "latitude": 53.55505895802228,
    "longitude": 10.02576604485512,
  },
  {
    "latitude": 53.56545917520555,
    "longitude": 10.0412155687809,
  },
]
`;
